--- a/serde_watson/Cargo.toml
+++ b/serde_watson/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = "1.0.137"
+watson = { version = "0.1.0", path = "../watson" }
+
+[dev-dependencies]
+serde_test = "1.0.137"
