--- a/watson/Cargo.toml
+++ b/watson/Cargo.toml
@@ -11,5 +11,6 @@ categories = ["encoding"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-once_cell = "1"
+
+[dev-dependencies]
 tempfile = "3"
