--- a/watson_rs/Cargo.toml
+++ b/watson_rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "watson"
+name = "watson_rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["Genta Kamitani <oftn.mofumofu@gmail.com>"]
