Misc: fix fiel name in Cargo.toml

--- a/serde_watson/Cargo.toml
+++ b/serde_watson/Cargo.toml
@@ -3,7 +3,7 @@ name = "serde_watson"
 version = "0.1.0"
 edition = "2021"
 authors = ["Genta Kamitani <oftn.mofumofu@gmail.com>"]
-license-file = "Apache-2.0"
+license = "Apache-2.0"
 description = "Rust implementation for Wasted but Amazing Turing-incomplete Stack-based Object Notation (WATSON)"
 repository = "https://github.com/genkami/watson-rs"
 categories = ["encoding"]
